@@ -8,7 +8,9 @@ Upstream Author: Jamie Wilkinson <jaq@spacepants.org>
 Copyright:
 
 Copyright (c) 2001,2002,2003 Matthew Kirkwood
-Copyright (c) 2003,2004 Jamie Wilkinson
+Copyright (c) 2003-2009 Jamie Wilkinson
+
+License:
 
    This package is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
